# SCaBOliC

./: .gitignore  CMakeLists.txt  README.md  bce.cpp  bce.h  testBCE.cpp
app/cplex-writer/: CMakeLists.txt  cplex-writer.cpp
app/cplex-writer/include/: utils.h
app/gen-sol/: CMakeLists.txt  gen-sol.cpp
app/generate-shapes/: CMakeLists.txt  generate-shapes.cpp
app/input-reader/: CMakeLists.txt
app/input-reader/include/input-reader/: InputData.h  InputReader.h  Shape.h  utils.h
app/input-reader/src/: InputReader.cpp  utils.cpp
app/python-writer/: CMakeLists.txt  python-writer.cpp
app/python-writer/include/: SparseMatrix.h
app/python-writer/python-scripts/: model.py  python-qpsolver.py  python_qpsolver.py  wrapper_mosek.py
app/unconstrained-model/: CMakeLists.txt  unconstrained-model.cpp
lab/: CMakeLists.txt  compareImproveProbe.cpp  expGreedy.cpp  expOpening.cpp  expScabolic.cpp  testScabolic.cpp
lab/example/: CMakeLists.txt
lab/example/flow/: CMakeLists.txt  example-flow.cpp  test-flow.cpp
lab/example/flow/include/: Flow.h
lab/example/flow/include/flow/: Flow.h  InputData.h  InputReader.h  Shape.h  utils.h
lab/example/flow/src/: Flow.cpp  InputReader.cpp  utils.cpp
lab/example/input/: CMakeLists.txt
lab/example/input/include/: InputData.h  InputReader.h
lab/example/input/src/: InputReader.cpp
lab/example/levels-contribution/: CMakeLists.txt  levels-contribution.cpp
lab/example/levels-contribution/include/: PotentialMap.h
lab/example/levels-contribution/src/: PotentialMap.cpp
lab/example/potential-set/: CMakeLists.txt  potential-set.cpp
lab/include/Experiment/: ExpApplicationType.h  ExpFlow.h  ExpFlowFromDigitizer.h  ExpFlowFromImage.h  ExpInput.h  ExpQPBOSolverType.h
lab/include/SCaBOliC/lab/Experiment/: ExpApplicationType.h  ExpFlowFromImage.h  ExpInput.h  ExpQPBOSolverType.h
lab/include/SCaBOliC/lab/Test/: LinelTestInstances.h  PixelTestInstances.h  TestEnergyEvaluation.h  TestEnergyOptimization.h  TestInstances.h
lab/include/SCaBOliC/lab/Utils/: ShapeDigitizer.h
lab/include/SCaBOliC/lab/model/: ImageInput.h  UserInput.h
lab/include/Test/: TestEnergyEvaluation.h  TestEnergyOptimization.h  TestInstances.h
lab/include/Utils/: Generator.h  MockDistribution.h  ShapeDigitizer.h  Utils.h
lab/include/model/: ImageInput.h  OptOutput.h  QPBOSolverType.h  UserInput.h
lab/src/Experiment/: ExpApplicationType.cpp  ExpFlow.cpp  ExpFlowFromDigitizer.cpp  ExpFlowFromImage.cpp  ExpQPBOSolverType.cpp
lab/src/Test/: LinelTestInstances.cpp  PixelTestInstances.cpp  TestEnergyEvaluation.cpp  TestEnergyOptimization.cpp  TestInstances.cpp
lab/src/Utils/: Utils.cpp
lab/test/flow/: test-flow.cpp
modules/API/: CMakeLists.txt
modules/API/include/SCaBOliC/API/: api.h
modules/API/include/SCaBOliC/include/API/: api.h
modules/API/src/: api.cpp
modules/Core/: CMakeLists.txt
modules/Core/include/SCaBOliC/Core/: BCEInput.h  InterpixelSpaceHandle.h  ODRDistance.h  ODRFactory.h  ODRInterface.h  ODRInterpixels.h  ODRModel.h  ODRPixels.h  ODRUtils.h  ODRUtils.hpp  OptimizationDigitalRegions.h  PixelSpaceHandle.h  SpaceHandleInterface.h  display.h
modules/Core/include/SCaBOliC/Core/ODRInterpixels/: InterpixelSpaceHandle.h  ODRInterpixels.h
modules/Core/include/SCaBOliC/Core/ODRLinels/: LinelSpaceHandle.h  ODRLinels.h
modules/Core/include/SCaBOliC/Core/ODRPixels/: ODRPixels.h  PixelSpaceHandle.h
modules/Core/include/SCaBOliC/Core/interface/: ODRInterface.h  SpaceHandleInterface.h
modules/Core/include/SCaBOliC/Core/model/: BCEInput.h  IntersectionAttributes.h  ODRModel.h
modules/Core/src/: InterpixelSpaceHandle.cpp  LinelSpaceHandle.cpp  ODRDistance.cpp  ODRFactory.cpp  ODRInterface.cpp  ODRInterpixels.cpp  ODRLinels.cpp  ODRPixels.cpp  ODRUtils.cpp  PixelSpaceHandle.cpp  display.cpp
modules/Energy/: CMakeLists.txt
modules/Energy/include/SCaBOliC/Energy/ISQ/: ISQEnergy.h  ISQEnergy.hpp  InputData.h  VariableMap.h
modules/Energy/include/SCaBOliC/Energy/base/: EnergyTerm.h  EnergyTerm.hpp  MultiIndex.h
modules/Energy/include/SCaBOliC/Energy/model/: OptimizationData.h  Solution.h
modules/Energy/src/Energy/ISQ/: ISQEnergy.cpp  VariableMap.cpp
modules/Energy/src/Energy/ISQ/base/: EnergyTerm.cpp
modules/Energy/src/Energy/base/: EnergyTerm.cpp
modules/Optimization/: CMakeLists.txt
modules/Optimization/include/SCaBOliC/Optimization/qpbo/: QPBO.h  qpbo_alpha_expand.h
modules/Optimization/include/SCaBOliC/Optimization/solver/: QPBOSolver.h  QPBOSolver.hpp  QPBOSolverType.h
modules/Optimization/src/qpbo/: QPBO.cpp  QPBO_extra.cpp  QPBO_maxflow.cpp  QPBO_postprocessing.cpp  instances.inc
modules/Optimization/src/solver/improve/: QPBOImproveSolver.cpp
modules/Optimization/src/solver/improveProbe/: QPBOIP.cpp
modules/Optimization/src/solver/interface/: IQPBOSolver.cpp
modules/Optimization/src/solver/probe/: QPBOProbeSolver.cpp
modules/Optimization/src/solver/simple/: QPBOSimpleSolver.cpp
modules/Regularization/: CMakeLists.txt
modules/Regularization/include/SCaBOliC/Regularization/SQCurv/: Regularizator.h
modules/Regularization/include/SCaBOliC/Regularization/base/: Solution.h
modules/Regularization/include/SCaBOliC/Regularization/interface/: ICoefficientsComputer.h  IEnergyTerm.h  IModelData.h  IVariableMap.h
modules/Regularization/src/SQCurv/Model/: CoeficientsComputer.cpp
modules/Utils/: CMakeLists.txt
modules/Utils/include/SCaBOliC/Utils/: Utils.h  Utils.hpp
modules/Utils/src/: Utils.cpp
test/: CMakeLists.txt  expScabolic.cpp  testScabolic.cpp
test/include/: ExpQPBOSolverType.h  MockDistribution.h  Table.h  Table.hpp  TestEnergyOptimization.h
test/include/Experiment/: ExpApplicationType.h  ExpQPBOSolverType.h
test/include/Experiment/base/: ImageInput.h
test/include/Test/: TestEnergyOptimization.h
test/include/Utils/: MockDistribution.h  TestUtils.h
test/src/: ExpQPBOSolverType.cpp  Table.cpp  TestEnergyOptimization.cpp  testScabolic.cpp
test/src/Experiment/: ExpApplicationType.cpp  ExpQPBOSolverType.cpp
test/src/Test/: TestEnergyOptimization.cpp
test/src/Utils/: TestUtils.cpp
(+82 files in other folders)
